<resources>
    <string name="app_name">Pocket Bartender</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="drink_search_label_text">Search for drink by name</string>
</resources>
